--- a/HearBoard/Info.plist
+++ b/HearBoard/Info.plist
@@ -22,6 +22,13 @@
 	<string>1</string>
 	<key>LSMinimumSystemVersion</key>
 	<string>$(MACOSX_DEPLOYMENT_TARGET)</string>
+	<key>LSUIElement</key>
+	<true/>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2016 David Weinstein. All rights reserved.</string>
 	<key>NSMainNibFile</key>
